--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,24 @@
 ::-webkit-scrollbar{
   display: none;
 }
+/* to make outline a text */
+.stroke-text{
+  color: transparent;
+  font-family: Arial, Helvetica, sans-serif;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: white;
+}
+/* styling of button  */
+.btn{
+  background-color: white;
+  padding: 0.5rem;
+  font-weight: bold;
+  border:4px solid transparent;
+  transition: 300ms all;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.btn:hover{
+  cursor: pointer;
+}
