done with the first react class and deploied

--- a/src/components/Reasons/Reasons.css
+++ b/src/components/Reasons/Reasons.css
@@ -15,12 +15,12 @@
     object-fit: cover;
 }
 .left-r >:nth-child(1){
-    width: 12rem;
+    width: 14rem;
     grid-row: 1/3;
     height: 28rem;
 }
 .left-r >:nth-child(2){
-   width: auto;
+   width: 26.5rem;
    height: 16rem;
    grid-column: 2/4;
 }
@@ -76,4 +76,30 @@
 }
 .partners>img{
     width: 2.5rem;
+}
+@media  screen and (max-width: 768px){
+    .Reasons{
+        flex-direction: column;
+    }
+    .left-r{
+        grid-auto-rows: auto;
+        overflow: hidden;
+    }
+    .left-r > :nth-child(1){
+        width: 7rem;
+        height: 17rem;
+    }
+     
+    .left-r > :nth-child(2){
+        width: 15rem;
+        height: 10rem;
+    }
+     
+    .left-r > :nth-child(3){
+        width: 7rem;
+    }
+     .left-r > :nth-child(4){
+        width: 7rem;
+        height: 6rem;
+    }
 }
